fixing contrast

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--paragraph-font);
 }
 
 nav {
@@ -35,7 +36,7 @@ nav a {
 }
 
 h1 {
-    color: var(--primary-color);
+    color: steelblue;
 }
 main img {
     width: 150px;
@@ -78,7 +79,7 @@ aside h2 {
     margin: 1rem;
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: hsl(0, 0%, 70%); 
+    background-color: hwb(0 90% 10%); 
     color: hsl(0, 0%, 0%);
 }
 header, .grid, footer {
